# bleb

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  bleb-dump.py
buildscripts/: bleb.py  blebtool.py
doc/: ondisk.txt
include/bleb/: buffer.hpp  byteio.hpp  byteio_stdio.hpp  byteio_vector.hpp  repository.hpp
src/: blebtool.cpp  main.cpp
src/bleb/: byteio.cpp  internal.cpp  internal.hpp  on_disk_structures.hpp  repository.cpp  repository_directory.cpp  repository_directory.hpp  repository_stream.cpp  repository_stream.hpp
test/: test_byteio_vector.cpp  test_repository.cpp
